<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/general_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="@dimen/half_padding"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_camera" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/general_padding"
            android:text="@string/name_label" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Name" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/general_padding"
            android:text="@string/description_label" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Description" />

        <TextView
            android:id="@+id/surnameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/general_padding"
            android:text="@string/surname_label" />

        <TextView
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Surname" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/general_padding"
            android:text="@string/email_label" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Email" />

        <TextView
            android:id="@+id/genderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/general_padding"
            android:text="@string/gender_label" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Gender" />

        <TextView
            android:id="@+id/addressLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/general_padding"
            android:text="@string/address_label" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Address" />

        <TextView
            android:id="@+id/registeredDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/general_padding"
            android:text="@string/registered_label" />

        <TextView
            android:id="@+id/registeredDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Registered" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
